<resources>
    <string name="app_name">SoundStax</string>
    <string name="release_title_hint">Enter release title.</string>
    <string name="release_title_label">Title</string>
    <string name="ablum_year_label">Release Year</string>
    <string name="release_year_hint">Enter release realease year.</string>
    <string name="ablum_owned_hint">Owned</string>
    <string name="ablum_artist_label">Artist</string>
    <string name="release_artist_hint">Enter release artist.</string>
    <string name="release_genre_label">Genre</string>
    <string name="release_genre_hint">Enter release genre</string>
    <string name="new_release">New Release</string>
    <string name="delete_release">Delete Release</string>
    <string name="sign_in_button_label">Log In to Discogs</string>
    <string name="test_user_button_label">Test User</string>
    <string name="log_out_button_label">Log Out</string>
    <string name="dashboard_nav_label">Dashboard</string>
    <string name="collection_nav_label">Collection</string>
    <string name="wantlist_nav_label">Wantlist</string>
    <string name="lists_nav_label">Lists</string>
    <string name="profile_nav_label">Profile</string>
    <string name="logout_nav_label">Log out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="collection_dash_label_text">Collection</string>
    <string name="user_name_default">User Name</string>
    <string name="genre_filter_label">Genre Filter</string>
    <string name="user_info_fragment_releases_label">Releases</string>
    <string name="user_info_fragment_rated_label">Releases Rated:</string>
    <string name="user_info_fragment_rating_average_label">Rating Averages:</string>
    <string name="user_info_fragment_pending_label">Pending:</string>
    <string name="user_info_fragment_marketplace_label">Marketplace</string>
    <string name="user_info_fragment_seller_rating_label">Seller Rating:</string>
    <string name="user_info_fragment_buyer_rating_label">Buyer Rating:</string>
    <string name="user_info_fragment_seller_ratings_num_label">Seller Ratings:</string>
    <string name="user_info_fragment_buyer_ratings_num_label">Buyer Ratings:</string>
    <string name="search_hint">Search Artists and Releases…</string>
    <string name="folder_filter_label">Folder Filter</string>
    <string name="sync_nav_label">Sync Lists</string>
</resources>
