<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard_fragment_nav"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/dashboard_nav_label"/>
    <item
        android:id="@+id/collection_fragment_nav"
        android:icon="@drawable/ic_album_white_24dp"
        android:title="@string/collection_nav_label"/>
    <item
        android:id="@+id/wantlist_fragment_nav"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/wantlist_nav_label"/>
    <item
        android:id="@+id/lists_fragment_nav"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/lists_nav_label"/>
    <item
        android:id="@+id/profile_fragment_nav"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/profile_nav_label"/>
    <item
        android:id="@+id/logout_nav"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/logout_nav_label"/>
</menu>