<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/release_cover_image_view"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_title_label"/>

        <TextView
            android:id="@+id/release_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ablum_artist_label"/>

        <TextView
            android:id="@+id/release_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_genre_label"/>

        <TextView
            android:id="@+id/release_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ablum_year_label"/>

        <TextView
            android:id="@+id/release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            />



        <Button
            android:id="@+id/modify_release_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <!--android:text="@string/delete_release"-->
        <!--/>-->

        <Button
            android:id="@+id/modify_release_two_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <!--android:text="@string/delete_release"-->
        <!--/>-->

        <Button
            android:id="@+id/spotify_play_button"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/spotify"/>


    </LinearLayout>
</ScrollView>
